--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.client__list, .team__social-list, .team__list, .section__list, .benefits__list, .subscribe__list, .social__list, .address__list, .con__list, .nav__list {
+.client__list, .team__social-list, .team__list, .section__list, .benefits__list, .subscribe__list, .social__list, .address__list, .con__list, .nav__list, .mobile-menu__nav, .mobile-menu__con, .mobile-menu__soc {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -410,46 +410,119 @@ img {
   color: #2196f3;
 }
 
+.menu__container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: #ffffff;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 3;
+}
 @media screen and (min-width: 768px) {
-  .menu {
+  .menu__container {
     display: none;
   }
 }
-.menu__button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+.menu__container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+.menu__container .menu__toggle {
+  position: absolute;
+  top: 20px;
+  right: 15px;
+}
+.menu__container .menu__toggle_icon {
+  z-index: 10;
+}
+
+.menu__toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
-  border: none;
   background: transparent;
-}
-.menu__icon:hover > .menu__icon-burger, .menu__icon:hover > .menu__icon-cross {
+  min-width: 40px;
+  min-height: 40px;
+  cursor: pointer;
+  border: none;
+  outline: none;
   color: #2196f3;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu__icon-burger, .menu__icon-cross {
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .menu__toggle {
+    display: none;
+  }
+}
+.menu__toggle:hover > .menu__toggle_icon {
   fill: currentColor;
 }
-.menu__button .menu__icon-cross, .menu__button.is-open .menu__icon-burger {
-  display: none;
+
+.mobile-menu__link {
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
 }
-.menu__button.is-open .menu__icon-cross {
-  display: block;
+.mobile-menu__nav {
+  margin-bottom: 300px;
 }
-.menu__container {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 796px;
-  top: 100%;
-  left: 0;
-  background-color: #ffffff;
+.mobile-menu__nav .mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
 }
-.menu__container.is-open {
-  display: block;
+.mobile-menu__nav .mobile-menu__link {
+  color: #212121;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+.mobile-menu__nav .mobile-menu__link_current {
+  color: #2196f3;
+}
+.mobile-menu__con {
+  margin-bottom: 64px;
+}
+.mobile-menu__con .mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-menu__con .mobile-menu__link_tel {
+  color: #2196f3;
+  font-size: 34px;
+}
+.mobile-menu__con .mobile-menu__link_mail {
+  color: #757575;
+  font-size: 24px;
+}
+.mobile-menu__soc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.mobile-menu__soc .mobile-menu__item:not(:last-child) {
+  margin-right: 20px;
+}
+.mobile-menu__soc .mobile-menu__link {
+  color: #2196f3;
+  font-size: 18px;
 }
 
 @media screen and (max-width: 767px) {
@@ -1292,6 +1365,12 @@ img {
   border-radius: 0 0 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 1200px) {
+  .team__card img {
+    width: 270px;
+    height: 260px;
+  }
 }
 .team__text {
   color: #757575;
