--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,58 +1,146 @@
-.menu {
+.menu__container {
   @media screen and (min-width: 768px) {
     display: none;
   }
 
-  &__button {
-    display: inline-flex;
+  position: fixed;
+  top: 0;
+  right: 0;
 
-    margin: 0;
-    padding: 0;
+  width: 100vw;
+  height: 100vh;
 
-    border: none;
+  padding: 48px 40px;
 
-    background: transparent;
+  background-color: $primary-white-color;
+
+  transform: translateX(100%);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  z-index: 3;
+
+  &.is-open {
+    transform: translateX(0);
   }
 
-  &__icon {
-    &:hover > &-burger,
-    &:hover > &-cross {
-      color: $accent-color;
+  .menu__toggle {
+    position: absolute;
+
+    top: 20px;
+    right: 15px;
+
+    &_icon {
+      z-index: 10;
+    }
+  }
+}
+
+.menu__toggle {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  padding: 0;
+
+  background: transparent;
+
+  min-width: 40px;
+  min-height: 40px;
+
+  cursor: pointer;
+
+  border: none;
+  outline: none;
+
+  color: $accent-color;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover > &_icon {
+    fill: currentColor;
+  }
+}
+
+.mobile-menu {
+  &__nav,
+  &__con,
+  &__soc {
+    @extend %list;
+  }
+
+  &__link {
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+  }
+
+  &__nav {
+    margin-bottom: 300px;
+
+    .mobile-menu__item {
+      &:not(:last-child) {
+        margin-bottom: 32px;
+      }
+    }
+
+    .mobile-menu__link {
+      color: $title-text-color;
+
+      font-weight: 500;
+      font-size: 40px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+
+      text-decoration: none;
+
+      &_current {
+        color: $accent-color;
+      }
     }
   }
 
-  &__icon-burger,
-  &__icon-cross {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__con {
+    margin-bottom: 64px;
 
-    fill: currentColor;
+    .mobile-menu__item {
+      &:not(:last-child) {
+        margin-bottom: 32px;
+      }
+    }
+
+    .mobile-menu__link_tel {
+      color: $accent-color;
+
+      font-size: 34px;
+    }
+
+    .mobile-menu__link_mail {
+      color: $primary-text-color;
+
+      font-size: 24px;
+    }
   }
 
-  &__button &__icon-cross,
-  &__button.is-open &__icon-burger {
-    display: none;
-  }
+  &__soc {
+    display: flex;
 
-  &__button.is-open &__icon-cross {
-    display: block;
-  }
+    .mobile-menu__item {
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
+    }
 
-  &__container {
-    display: none;
+    .mobile-menu__link {
+      color: $accent-color;
 
-    position: absolute;
-
-    z-index: 1;
-
-    width: 100%;
-    height: 796px;
-    top: 100%;
-    left: 0;
-
-    background-color: $primary-white-color;
-
-    &.is-open {
-      display: block;
+      font-size: 18px;
     }
   }
 }
