--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -16,6 +16,13 @@
     border-radius: 0 0 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    img {
+      @media screen and (min-width: 1200px) {
+        width: 270px;
+        height: 260px;
+      }
+    }
   }
 
   &__text {
